# okletsdoit

./: .dockerignore  .env.example  .gitignore  .trivyignore  .trivyignore.yaml  404.html  CHANGELOG.md  README.md  docker-compose.yml  index.html  justfile  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  todo.md  trivy-results.sarif  trivy-secret.yaml  trivy.yaml
.github/: copilot-instructions.md
.github/instructions/: BACKEND.instructions.md  FRONTEND.instructions.md
.github/workflows/: auto_pr.yml  cd.yml  cd_develop.yml  cd_main.yml  ci.yml  ci_cd.yml  develop.yml  main.yml  publish.yml  release.yml
app/: .env.example
app/attachments/: forms.py  models.py  urls.py  views.py
app/attachments/migrations/: 0001_initial.py
app/contacts/: admin.py  forms.py  models.py  urls.py  views.py
app/contacts/migrations/: 0001_initial.py
app/core/: admin.py  auth.py  forms.py  models.py  urls.py  views.py
app/core/migrations/: 0008_remove_historicalinspiration_file_and_more.py  0009_historicalquestion_question.py  0011_historicalquestion_published_question_published.py  0013_historicalrsvpformboolean_rsvpformboolean.py  0014_alter_rsvpformboolean_options_and_more.py  0016_weddingsettings_wedding_date.py  0017_weddingsettings_rsvp_accept_button_and_more.py  0024_historicalrsvpformboolean_published_and_more.py  0027_historicalweddingsettings_standard_group_label_and_more.py  (+10 more)
app/deadline/: models.py  urls.py  views.py
app/expenses/: admin.py  forms.py  models.py  urls.py  views.py
app/guestlist/: admin.py  api.py  forms.py  models.py  urls.py  views.py
app/list/: forms.py  urls.py  views.py
app/okletsdoit/: context_processors.py  settings.py  urls.py
app/shared_helpers/: apps.py  table_helpers.py
app/users/: adapters.py  admin.py  models.py
backend/: .env.example  .gitignore  package.json
backend/attachments/: admin.py  api.py  forms.py  models.py  tests.py  urls.py  views.py
backend/contacts/: api.py  models.py  urls.py  views.py
backend/core/: admin.py  api.py  apps.py  auth.py  forms.py  middleware.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/deadline/: api.py  forms.py  models.py  urls.py
backend/expenses/: api.py
backend/guestlist/: admin.py  api.py  apps.py  forms.py  models.py  resources.py  tasks.py
backend/list/: admin.py  api.py  models.py  urls.py  views.py
backend/okletsdoit/: api.py  asgi.py  celery.py  context_processors.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py
contacts/: admin.py  forms.py  models.py  views.py
contacts/migrations/: 0002_alter_contact_options_and_more.py  0003_contact_category.py  0004_remove_contact_unique_contact_alter_contact_name_and_more.py  0005_historicalcontact.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_task_assigned_to.py  0003_idea.py  0003_remove_historicaltasklist_created_by_and_more.py  0004_historicaltimeline_timeline.py  0005_alter_historicaltimeline_end_alter_timeline_end.py
core/templatetags/: form_extras.py
deadline/: admin.py  forms.py  models.py  urls.py  views.py
deadline/migrations/: 0001_initial.py
dev/roadmap/: index.html
docker/: Dockerfile  Dockerfile-Frontend  docker-compose-prod.yml  docker-compose.yml  docker-entrypoint.sh
docker/nginx/: default.conf
docker/traefik/: dynamic.yml
docs/: features.md  index.md  ui.md
docs/dev/: roadmap.md
docs/features/: budget.md  contacts.md  dashboard.md  deadlines.md  faq.md  guestlist.md  inspiration.md  lists.md  timeline.md
docs/private/: guestlist.md  settings.md
docs/public/: rsvp.md
docs/templates/: buttons.md  object.md
expenses/: admin.py  forms.py  models.py  urls.py  views.py
expenses/migrations/: 0002_expense_quantity.py  0006_expense_url.py  0007_historicalcategory_historicalexpense.py
features/: index.html
features/budget/: index.html
features/contacts/: index.html
features/deadlines/: index.html
features/idea/: index.html
features/inspiration/: index.html
features/lists/: index.html
features/timeline/: index.html
frontend/: .gitignore  README_API.md  eslint.config.mjs  openapitools.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/api-client/: runtime.ts
frontend/src/: app.d.ts  hooks.server.ts  types.ts
guestlist/: admin.py  apps.py  forms.py  urls.py  views.py
guestlist/migrations/: 0001_initial.py  0002_guestgroup_associated_with_and_more.py  0003_guest_overnight_historicalguest_overnight.py  0004_guest_responded_historicalguest_responded.py
list/: admin.py  forms.py  models.py  urls.py  views.py
list/migrations/: 0001_initial.py  0003_alter_list_options_alter_listentry_options_and_more.py  0004_listentry_completed_at.py  0006_listentry_expense_item.py  0009_listentry_vendor.py  0010_listentry_url.py  0011_alter_listentry_url.py  0013_historicallistentry_image_listentry_image.py
okletsdoit/: .env.example  context_processors.py  settings.py  urls.py
private/guestlist/: index.html
private/hub/: index.html
private/settings/: index.html
public/faq/: index.html
public/rsvp/: index.html
public/venue/: index.html
search/: search_index.json
site/: 404.html  index.html
site/features/: index.html
site/search/: search_index.json
site/ui/: index.html
templates/components/: base.html  call_to_action.html  card_options.html  ckeditor_script.html  modal_add_task_list.html  modal_edit_expense_category.html  modal_edit_task.html  modal_edit_task_list.html  navbar.html
templates/contacts/: contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html
templates/core/: idea_create.html  idea_detail.html  idea_edit.html  idea_list.html  index.html  our_story.html  photos.html  rsvp.html  task_create.html  task_edit.html  task_list.html  task_list_confirm_delete.html  task_list_detail.html  task_list_form.html
templates/expenses/: category_list.html  expense_list.html  summary.html
ui/: index.html
users/: adapters.py  forms.py  models.py  tests.py
(+834 files in other folders)
