[project]
name = "okletsdoit"
version = "0.1.0"
description = "Wedding communication platform"
authors = [
    {name = "Ian Day", email = "ian@ianday.me"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django>=5.2",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]
