[project]
name = "okletsdoit"
version = "0.1.0"
description = "Wedding communication platform"
authors = [
    {name = "Ian Day", email = "ian@ianday.me"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django>=5.2",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "Werkzeug (>=3.1,<3.2)",
    "whitenoise (>=6.9.0,<6.10)",
]

[dependency-groups]
dev = [
  "mypy>=1.2.0",
  "ruff==0.11.5",
  "django-debug-toolbar==5.1.0", # https://github.com/jazzband/django-debug-toolbar
  "django-extensions==4.1", # https://github.com/django-extensions/django-extensions #generate model.png
  "django-coverage-plugin==3.1.0", # https://github.com/nedbat/django_coverage_plugin
  "pytest-django==4.11.1", # https://github.com/pytest-dev/pytest-django
  "watchfiles==1.0.5", # https://github.com/samuelcolvin/watchfiles
  "factory-boy==3.3.2", # https://github.com/FactoryBoy/factory_boy https://medium.com/analytics-vidhya/factoryboy-usage-cd0398fd11d2
  "pre-commit>=4.2.0",
  "django-stubs[compatible-mypy]>=5.1.3",
  "types-django-import-export>=4.3.0.20250218",
  "djlint>=1.36.4",
]

[tool.mypy]
python_executable = ".venv/bin/python"
plugins = [
    "mypy_django_plugin.main",
]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "okletsdoit.settings"

[tool.coverage.run]
include = ["bokletsdoit/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

[tool.coverage.django_coverage_plugin]
template_extensions = 'html, txt, tex, email'

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
ignore = [
  "TRY003",
  "EM101",
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "COM812",
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=okletsdoit.settings --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]
DJANGO_SETTINGS_MODULE = "okletsdoit.settings"


[tool.djlint]
profile = "django"
blank_line_after_tag="load,extends,include"
blank_line_before_tag="load,extends,include"
extension="html"
ignore="H014,H015,H006"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2