[project]
name = "okletsdoit"
version = "0.2.0"
description = "Wedding communication platform"
authors = [
    {name = "Ian Day", email = "ian@ianday.me"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django>=5.2.8",
    "django-csp>=4.0",
    "django-environ>=0.12.0",
    "django-extensions==4.1", # https://github.com/django-extensions/django-extensions #generate model.png
    "django-health-check>=3.20.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "Werkzeug (>=3.1,<3.2)",
    "gunicorn>=21.2.0",
    "django-allauth[headless,headless-spec,mfa,openid,socialaccount]>=65.13.0",
    "django-allauth-ui>=1.8.1",
    "django-import-export>=4.3.8",
    "django-simple-history>=3.10.1",
    "django-stubs[compatible-mypy]>=5.1.3",
    "pillow>=11.3.0",
    "django-widget-tweaks>=1.5.0",
    "slippers>=0.6.2",
    "openpyxl>=3.1.5",
    "polars>=1.31.0",
    "xlsxwriter>=3.2.5",
    "fastexcel>=0.18.0",
    "python-json-logger>=3.3.0",
    "docutils>=0.21.2",
    "pillow-heif>=1.1.0",
    "django-cotton>=2.1.3",
    "django-storages[s3]>=1.14.6",
    "django-constance[redis]>=4.3.2",
    "django-iam-dbauth>=0.2.1",
    "django-allow-cidr>=0.8.0",
    "celery>=5.5.3",
    "django-celery-beat>=2.8.1",
    "django-redis>=6.0.0",
    "redis>=6.4.0",
    "django-celery-results>=2.6.0",
    "django-crispy-forms>=2.4",
    "django-crispy-formset-modal>=0.15",
    "django-extra-views>=0.16.0",
    "django-pwa>=2.0.1",
    "django-cors-headers>=4.9.0",
]

[dependency-groups]
dev = [
  "mypy>=1.2.0",
  "ruff==0.11.5",
  "django-debug-toolbar==5.1.0", # https://github.com/jazzband/django-debug-toolbar
  "django-coverage-plugin==3.1.0", # https://github.com/nedbat/django_coverage_plugin
  "pytest-django==4.11.1", # https://github.com/pytest-dev/pytest-django
  "watchfiles==1.1.1", # https://github.com/samuelcolvin/watchfiles
  "factory-boy==3.3.2", # https://github.com/FactoryBoy/factory_boy https://medium.com/analytics-vidhya/factoryboy-usage-cd0398fd11d2
  "pre-commit>=4.2.0",
  "types-django-import-export>=4.3.0.20250218",
  "djlint>=1.36.4",
  "django-stubs>=5.2.1",
]
doc = [
  "mkdocs  (>=1.6,<1.7)",
  "mkdocs-material (>=9.5,<9.6)",
  "mkdocs-material-extensions (>=1.3,<1.4)",
]
build = ["uv ~= 0.7.12"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = ["django.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "okletsdoit.settings"


[tool.coverage.run]
include = ["bokletsdoit/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

[tool.coverage.django_coverage_plugin]
template_extensions = 'html, txt, tex, email'

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
]

[tool.ruff.lint]
ignore = [
  "TRY003",
  "EM101",
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "COM812",
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=okletsdoit.settings --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]
DJANGO_SETTINGS_MODULE = "okletsdoit.settings"


[tool.djlint]
profile = "django"
blank_line_after_tag="load,extends,include"
blank_line_before_tag="load,extends,include"
extension="html"
ignore="H014,H015,H006"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "okletsdoit"
    git add uv.lock
    uv build
"""
major_on_zero = false
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
